--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -6,7 +6,7 @@ jobs:
 
     environment:
       - OTB_VERSION: v3.6
-      - OTB_TARGET: x86_64
+      - OTB_TARGET: rpi3
 
     working_directory: ~/
 
