--- a/overthebox/Makefile
+++ b/overthebox/Makefile
@@ -7,7 +7,7 @@ PKG_RELEASE:=1
 include $(INCLUDE_DIR)/package.mk
 
 MY_DEPENDS := \
-    graph glorytun kmod-macvlan \
+    easycwmp graph glorytun kmod-macvlan \
     tc kmod-sched kmod-sched-cake \
     jq curl ca-bundle ca-certificates \
     iperf3 @LIBCURL_THREADED_RESOLVER kexec
