otb-web: Rework on otb-web to use Vue.js instead of mithril.js

--- a/otb-web/package.json
+++ b/otb-web/package.json
@@ -4,11 +4,13 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "start": "browser-sync start --server 'files/otb-web' --files 'files/otb-web' --single",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "OVH",
   "license": "ISC",
   "devDependencies": {
+    "browser-sync": "^2.27.5",
     "eslint": "^7.13.0",
     "eslint-config-airbnb-base": "^14.2.1",
     "eslint-plugin-import": "^2.22.1"
